# omnivore

./: .env  .gitignore  .pdm-python  LICENSE  Makefile  Neeeco Input.csv  README.md  bulk.py  clean_sf.py  combine_raw.py  configure_project.sh  cron.sh  dev.Dockerfile  homeworks.py  neeeco.py  privatekey.pem  prod.Dockerfile  pyproject.toml  pyrightconfig.json  pytest.ini  requirements.txt  run.py  setup.cfg  setup.py
dashboard/: __init__.py  config.py  dummies.py  models.py  views.py
dashboard/static/assets/: sankey_data.json  sunburst_data.json
dashboard/templates/includes/: fixed-plugin.html  footer.html  navigation.html  prism-css.html  sidebar.html
dashboard/templates/layouts/: base.html
dashboard/templates/pages/: hpc.html  index.html  logs.html  profile.html  sankey.html  sunburst.html
migrations/: alembic.ini  env.py
migrations/versions/: 26394f8a2e92_adding_last_record_datetime_field_to_.py  d9aa890c756c_added_create_and_end_date_for_telemetry_.py
omnivore/: __init__.py  __main__.py  app.py
omnivore/cambridge/: cambridge.py
omnivore/homeworks/: homeworks.py
omnivore/neeeco/: neeeco.py
omnivore/revise/: Revise Input.csv  Revise Wx Input.csv  revise.py
omnivore/utils/: aux.py  constants.py  database.py  logging.py  salesforce.py  types.py
omnivore/vhi/: vhi.py
tests/: conftest.py  context.py  test_app.py  test_omnivore_methods.py  test_omnivore_staging.py  test_salesforce_methods.py
tests/cambridge/: cambridge_data.py  consulting.csv  quote.csv  test_cambridge.py
tests/homeworks/: generated_output.csv  homework_new_output.csv  homeworks test input.csv  homeworks_data.py  homeworks_new_test_input.csv  homeworks_old_test_input.csv  homeworks_test.csv  test_homeworks.py
tests/neeeco/: Neeeco Output.json  Neeeco Wx Input.csv  neeeco test input.csv  neeeco_data.py  neeeco_test.csv  test_neeeco.py
tests/revise/: Revise Input.csv  Revise Wx Input.csv  Revise output.csv  revise_data.py  test_revise.py
tests/utils/: account  aux.py  opportunity  salesforce_data.py  test_aux.py  test_salesforce.py
tests/vhi/: VHI Input.csv  VHI Output.csv  test_vhi.py  vhi_data.py
