
[project]
name = ""
version = ""
description = ""
authors = [
    {name = "Ankit Yadav", email = "ankittejyadav@gmail.com"},
]
dependencies = [
    "attrs==22.1.0",
    "Authlib==1.1.0",
    "autopep8==2.0.0",
    "certifi==2022.9.24",
    "cffi==1.15.1",
    "charset-normalizer==2.1.1",
    "coverage==6.5.0",
    "cryptography==38.0.3",
    "exceptiongroup==1.0.1",
    "future==0.18.2",
    "idna==3.4",
    "iniconfig==1.1.1",
    "isodate==0.6.1",
    "lxml==4.9.1",
    "mypy==0.982",
    "mypy-extensions==0.4.3",
    "numpy==1.23.4",
    "packaging==21.3",
    "pandas>=2.0.2",
    "platformdirs==2.5.3",
    "pluggy==1.0.0",
    "probableparsing==0.0.1",
    "pycodestyle==2.9.1",
    "pycparser==2.21",
    "pyparsing==3.0.9",
    "pytest>=7.4.0",
    "pytest-asyncio==0.20.2",
    "pytest-cov==4.0.0",
    "pytest-dotenv==0.5.2",
    "python-crfsuite==0.9.8",
    "python-dateutil==2.8.2",
    "python-dotenv==0.21.0",
    "pytz==2022.6",
    "requests==2.28.1",
    "requests-file==1.5.1",
    "requests-toolbelt==0.10.1",
    "simple-salesforce==1.12.2",
    "six==1.16.0",
    "tomli==2.0.1",
    "typing-extensions==4.4.0",
    "urllib3==1.26.12",
    "usaddress==0.5.10",
    "zeep==4.2.0",
]
requires-python = ">=3.10"
license = {text = "MIT"}

[tool.pdm.scripts]
_.env_file = ".env"
start="python omnivore/app.py"
test="python test_neeeco.py"
tests="pytest"
revise="python omnivore/revise/revise.py"

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"
