
[project]
name = "omnivore"
version = "2.0.0"
description = "Fully Autonomous Omnivore with PDM for installer"
authors = [
    {name = "Jimmy Hikmatullah", email = "jimmy@allinenergy.org"},
]
dependencies = [
    "pandas>=2.0.3",
    "usaddress>=0.5.10",
    "simple-salesforce>=1.12.4",
    "asyncio>=3.4.3",
    "numpy>=1.25.2",
    "python-dotenv>=1.0.0",
]
requires-python = ">=3.10"
license = {text = "MIT"}

[tool.pdm.scripts]
test.cmd="pytest -vv -m \"not staging\""
test.env_file=".env.test"
staging.cmd="pytest -vv -m staging"
staging.env_file=".env.staging"
clean="python clean_sf.py"

[tool.pdm.dev-dependencies]
test = [
    "pytest>=7.4.0",
    "coverage>=7.2.7",
    "pytest-cov>=4.1.0",
    "pytest-asyncio>=0.21.1",
]
[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"
